# testapp_conda_package

./: README.md  bld.bat  meta.yaml
TestWinApi/: CMakeLists.txt
